--- a/src/scenes/Login/styles.css
+++ b/src/scenes/Login/styles.css
@@ -5,7 +5,7 @@
     margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-items: center;
+    justify-items: space-between;
 }
 
 .login-container section.form {
